--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/index.ts",
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
     "@types/csv-parse": "^1.2.2",
-    "csv-parse": "^4.8.8",
+    "csv-parse": "^4.12.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -41,7 +40,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "3.3.0",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^3.8.3"
   }
 }
